# hikari

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  hikari.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml  codecov.yml
docs/: Makefile  algorithm - Best way to find all points of lattice in sphere - Stack Overflow.html  algorithm - Find all points in sphere of radius r around arbitrary coordinate - Stack Overflow.html  conf.py  environment.yaml  hikari.dataframes.rst  hikari.resources.rst  hikari.rst  hikari.scripts.rst  hikari.symmetry.rst  hikari.utility.rst  index.rst  make.bat  manual.md  matrices_of_common_symmetry_operations  modules.rst  pointgroup_names.txt  requirements.txt
docs/algorithm - Best way to find all points of lattice in sphere - Stack Overflow_files/: stub.en.js
docs/algorithm - Find all points in sphere of radius r around arbitrary coordinate - Stack Overflow_files/: full.en.js  gpt.js  primary.css  wmd.en.js
docs/references/algorithm - Best way to find all points of lattice in sphere - Stack Overflow_files/: external-editor.en.js  stacks.css
docs/references/algorithm - Find all points in sphere of radius r around arbitrary coordinate - Stack Overflow_files/: post-validation.en.js  snippet-javascript.en.js
docs/source/: conf.py  index.rst  installation.rst  kesshou.dataframes.rst  kesshou.rst  kesshou.scripts.rst  kesshou.symmetry.rst  kesshou.utility.rst  tutorial.rst
example/: hkl.msd
hikari/: __init__.py
hikari/dataframes/: __init__.py  base.py  cif.py  hkl.py  hkl_formats_defined.json  lst.py  res.py  ubase.py
hikari/legacy/: completeness_map_legacy.py  hikari (legacy).py  hkl_extinct_method.py  pruby (legacy).py
hikari/resources/: Hall_symbols_SG.wsv  NaCl.hkl  NaCl.res  Xray_atomic_form_factors.csv  __init__.py  characteristic_radiation.json  gnuplot_angular_heatmap_template.gnu  hkl.msd  hkl_formats_defined.json  point_groups.json  point_groups.pickle  point_groups.wsv  space_groups.json  space_groups.pickle  space_groups.wsv
hikari/scripts/: __init__.py  angular_explorer.py  compare_adps.py  fcf.py  hkl.py  hkl_completeness.py  hkl_potency.py  potency_map.py  r1_map.py
hikari/symmetry/: __init__.py  catalog.py  catalogue.py  group.py  hall.py  hall_symbols.py  operations.py  point_groups.pickle  point_groups.py  space_groups.json  space_groups.pickle  space_groups.py
hikari/utility/: __init__.py  artists.py  certain_float.py  chem_tools.py  dict_tools.py  interval.py  line_subset.py  list_tools.py  math_tools.py  numpy_tools.py  os_tools.py  palettes.py  singleton.py  typing.py
kesshou/: __init__.py  hikari.py  readers.py
kesshou/dataframes/: __init__.py  base.py  cif.py  cp.py  hkl.py  hkl_formats_aliases.json  hkl_formats_defined.json  pro.py  res.py
kesshou/legacy/: completeness_map_legacy.py  hikari (legacy).py  hkl_extinct_method.py
kesshou/scripts/: __init__.py  crysalis.py  crysalis_edge_mask.py  hkl.py  hkl_completeness_map.py  hkl_completeness_statistics.py  hkl_completeness_statistics_for_dac.py  hkl_dac_cplt_descriptive_statistics.py  hkl_simulate_dac.py  png.py
kesshou/scripts/cif/: compare_ADPs.py
kesshou/scripts/crysalis/: __init__.py  edge_mask.py
kesshou/scripts/hkl/: completeness_map.py  completeness_statistics.py  completeness_statistics_for_dac.py  dac_cplt_descriptive_statistics.py  simulate_dac.py
kesshou/scripts/misc/: fit_polynomial.py  interplanar_distance.py
kesshou/symmetry/: __init__.py  group.py  group2.py  group_old.py  operations.py  point_groups.py  pointgroup.py  pointgroup_old.py  space_groups.json  space_groups.py  spacegroup.py  symm_ops.py  symmetry_operations.py
kesshou/taskmasters/hkl/: __init__.py  completeness_map.py  completeness_statistics.py  completeness_statistics_for_dac.py  dac_cplt_descriptive_statistics.py  dac_statistics.py  simulate_dac.py
kesshou/utility/: __init__.py  angle.py  chemistry.py  cplt_map_template.gnu  cubespace.py  fibonacci_sphere.py  list_tools.py  math_tools.py  os_tools.py  palettes.py  parity.py  path_tools.py
scripts/: cif_compare-ADPs-from-two-cifs.py  compareADP.py  completeness_stats_teo.py  crysalis_reject-round-edge.py  dac_calculate-pointgroups-completeness-map.py  dac_calculate-pointgroups-completeness-statistics.py  dac_cut-hkl-to-DAC-limit-and-resolution-limit.py  dac_cut.py  dac_cut_fullhkl.py  dac_draw-pointgroups-completeness-map.py  dac_generate-hkl-and-cut-it-to-DAC-limit.py  dac_multistats.py  dac_stats.py  hikari (legacy).py  hkl_change-format.py  hkl_drawer.py  hkl_get-resolution-statistics.py  hkl_overwrite-intensity-using-other-file.py  hkl_reformatter.py  hkl_restore-symmetry.py  hklf3to4.py  legacy_hikari-console-interface.py  misc_fit-polynomial-to-spectrum.py  misc_measure-distance-between-planes.py  random_cut.py  resolution_stats.py  resolution_stats_teo.py  rewrite_hkl.py
test/: NaCl.cif  test_baseframe.py  test_dataframes.py  test_groups.py  test_operations.py  test_scripts.py  test_utility.py
test_data/: 714.ins  AP_m1_p1_23_2c.txt  Gcp_Vcp.csv  MP596_c1_p1_24_0c.txt  c1_p1_dt.cif  c1_p1_dt.hkl  c1_p1_dt_THoa45.hkl  c1_p1_dt_oa_research.ods  dt_default_rint40.cif  dt_default_rint40.hkl  example.hkl  exp_353.ins  exp_353.res  exp_353_194.CIF  exp_714.cif  exp_714.hkl  exp_791.cif  glycine_cplt010.hkl  glycine_cplt100.hkl  glycine_full_unmerged.hkl  glycine_oa35_unmerged.hkl  neu_353.cif  neu_353.hkl  neu_short1.hkl  neu_short2.hkl  output.hkl  output_tonto.hkl  short_353.hkl  small.hkl  sortav.hkl  xd.hkl  xd_pro.out  xd_pro_Bader.out  xd_pro_Bader_digested.csv  xd_pro_Sylwia.out  xd_pro_Sylwia_digested.csv  xd_pro_digested.out  xd_pro_sf.out  xd_pro_sf_digested.out
tests/: NaCl.cif  NaCl.fcf  NaCl.lst  __init__.py  test_dataframes.py  test_groups.py  test_operations.py  test_scripts.py
