[tool.poetry]
name = "hikari-toolkit"
version = "0.3.2"
description = "A high-level tool for manipulating crystallographic files"
authors = ["Daniel Tchoń <dtchon@chem.uw.edu.pl>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "hikari" }]
include = [{path = 'hikari/resources/*', format = ['sdist', 'wheel']}]
exclude = ["docs*", "tests*"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Physics',
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.25"
pandas = ">=1.0.1,!=1.5.0"
scipy = ">=1.5.1"
uncertainties = ">=3"
matplotlib = ">= 3.0.0,!=3.3.*"
seaborn = ">=0.11.0"

[tool.poetry.group.dev.dependencies]
poetry = {version = ">=1.8.0", python = "^3.9"}
flake8 = ">=7"
pytest = ">=8"
pytest-cov = ">=5"
sphinx = ">=7.2"
myst-nb = ">=1.1.2"
sphinx-autoapi = ">=3"
sphinx-rtd-theme = ">=3"
jupyter = ">=1.1"
python-semantic-release = {version = "^9.11.1", python = "^3.8"}
docutils = "!=0.21.post1"
tomli = ">= 2"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version", ]  # version location
branch = "master"                                        # branch to make releases of
changelog_file = "CHANGELOG.md"                          # changelog file
build_command = "pip install poetry && poetry build"     # build dists
commit_parser = "emoji"                                  # default EmojiCommitParser
major_on_zero = false                                    # change to "true" only if you are sure you want version 1
commit_message = ":bookmark: v{version}\n\nAutomatically generated by python-semantic-release"

[tool.semantic_release.branches]
master = { publish = true }        # Stable release branch (master)
development = { publish = false }  # Used for version checking only

[tool.semantic_release.commit_parser_options]
major_tags = [                          # CAUSE MAJOR VERSION BUMP 0.1.0 -> 1.0.0
    ":boom:",                           # 💥 Introduce breaking changes.
]
minor_tags = [                          # CAUSE MINOR VERSION BUMP 0.1.0 -> 0.2.0
    ":sparkles:",                       # ✨ Introduce new features.
]
patch_tags = [                          # CAUSE PATCH VERSION BUMP 0.1.0 -> 0.1.1
    ":adhesive_bandage:",               # 🩹 Simple fix for a non-critical issue.
    ":ambulance:",                      # 🚑️ Critical hotfix.
    ":alien:",                          # 👽️ Update code due to external API changes.
    ":alembic:",                        # ⚗️ Perform experiments.
    ":arrow_down:",                     # ⬇️ Downgrade dependencies.
    ":arrow_up:",                       # ⬆️ Upgrade dependencies.
    ":bento:",                          # 🍱 Add or update assets.
    ":bug:",                            # 🐛 Fix a bug.
    ":card_file_box:",                  # 🗃️ Perform database related changes.
    ":chart_with_upwards_trend:",       # 📈 Add or update analytics or track code.
    ":children_crossing:",              # 🚸 Improve user experience / usability.
    ":dizzy:",                          # 💫 Add or update animations and transitions.
    ":egg:",                            # 🥚 Add or update an easter egg.
    ":globe_with_meridians:",           # 🌐 Internationalization and localization.
    ":goal_net:",                       # 🥅 Catch errors.
    ":heavy_plus_sign:",                # ➕ Add a dependency.
    ":heavy_minus_sign:",               # ➖ Remove a dependency.
    ":iphone:",                         # 📱 Work on responsive design.
    ":lipstick:",                       # 💄 Add or update the UI and style files.
    ":label:",                          # 🏷️ Add or update types.
    ":lock:",                           # 🔒️ Fix security or privacy issues.
    ":mag:",                            # 🔍️ Improve SEO.
    ":necktie:",                        # 👔 Add or update business logic.
    ":package:",                        # 📦️ Add or update compiled files or packages.
    ":passport_control:",               # 🛂 Work on code related to authorization, roles and permissions.
    ":pencil2:",                        # ✏️ Fix typos.
    ":push_pin:",                       # 📌️ Pin dependencies to specific versions.
    ":rewind:",                         # ⏪️ Revert changes.
    ":speech_balloon:",                 # 💬 Add or update text and literals.
    ":triangular_flag_on_post:",        # 🚩 Add, update, or remove feature flags.
    ":wastebasket:",                    # 🗑️ Deprecate code that needs to be cleaned up.
    ":wheelchair:",                     # ♿️ Improve accessability.
    ":wrench:",                         # 🔧 Add or update configuration files.
    ":zap:",                            # ⚡️ Improve performance.
]
other_tags = [                          # UNSUPPORTED - DO NOT CAUSE VERSION BUMP
    ":art:",                            # 🎨 Improve structure / format of the code.
    ":beers:",                          # 🍻 Write code drunkenly.
    ":bookmark:",                       # 🔖 Release / Version tags.
    ":bricks:",                         # 🧱 Infrastructure related changes.
    ":bulb:",                           # 💡 Add or update comments in source code.
    ":building_construction:",          # 🏗️ Make architectural changes.
    ":busts_in_silhouette:",            # 👥 Add or update contributor(s).
    ":camera_flash:",                   # 📸 Add or update snapshots.
    ":closed_lock_with_key:",           # 🔐 Add or update secrets.
    ":clown_face:",                     # 🤡 Mock things.
    ":coffin:",                         # ⚰️ Remove dead code.
    ":construction:",                   # 🚧 Work in progress.
    ":construction_worker:",            # 👷 Add or update CI build system.
    ":fire:",                           # 🔥 Remove code or files.
    ":green_heart:",                    # 💚 Fix CI Build.
    ":hammer:",                         # 🔨 Add or update development scripts.
    ":loud_sounds:",                    # 🔊 Add or update logs.
    ":memo:",                           # 📝 Add or update documentation.
    ":money_with_wings:",               # 💸 Add sponsorships or money related infrastructure.
    ":monocle_face:",                   # 🧐 Data exploration/inspection.
    ":mute:",                           # 🔇 Remove logs.
    ":page_facing_up:",                 # 📄 Add or update license.
    ":poop:",                           # 💩 Write bad code that needs to be improved.
    ":recycle:",                        # ♻️ Refactor code.
    ":rocket:",                         # 🚀 Deploy stuff.
    ":rotating_light:",                 # 🚨 Fix compiler / linter warnings.
    ":safety_vest:",                    # 🦺 Add or update code related to validation.
    ":see_no_evil:",                    # 🙈 Add or update a .gitignore file.
    ":seedling:",                       # 🌱 Add or update seed files.
    ":stethoscope:",                    # 🩺 Add or update healthcheck.
    ":tada:",                           # 🎉 Begin a project.
    ":technologist:",                   # 🧑‍💻 Improve developer experience.
    ":test_tube:",                      # 🧪 Add a failing test.
    ":thread:",                         # 🧵 Add or update code related to multithreading or concurrency.
    ":truck:",                          # 🚚 Move or rename resources (e.g.: files, paths, routes).
    ":twisted_rightwards_arrows:",      # 🔀 Merge branches.
    ":white_check_mark:",               # ✅ Add, update, or pass tests.
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
